--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
 steps:
+# Create env vars file to pass to gcloud command
 - name: 'bash'
   args:
   - '-c'
@@ -15,6 +16,7 @@ steps:
     EOF
     echo "Created env file"
     cat .env.deploy
+# Deploy the function
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - functions
