--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,27 @@
 steps:
+# Download SonarQube code scanner
+- id: 'download'
+  name: 'bash'
+  args:
+  - '-c'
+  - |
+    export SONAR_SCANNER_VERSION=4.4.0.2170
+    export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
+    curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
+    unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+    export PATH=$SONAR_SCANNER_HOME/bin:$PATH
+    export SONAR_SCANNER_OPTS="-server"
+# Scan source for security vulnerabilities
+- id: 'scan'
+  name: 'bash'
+  args:
+  - '-c'
+  - |
+    sonar-scanner \
+      -Dsonar.organization=montana-mike \
+      -Dsonar.projectKey=mikesparr_ai-demo-functions \
+      -Dsonar.sources=./$_FUNCTION_NAME \
+      -Dsonar.host.url=https://sonarcloud.io
 # Create env vars file to pass to gcloud command
 - name: 'bash'
   args:
