--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,8 @@ steps:
   - '-Dsonar.projectKey=$_SONAR_KEY'
   - '-Dsonar.sources=./$_FUNCTION_NAME'
   - '-Dsonar.scm.disabled=True'
+  - '-Dsonar.language=py'
+  - '-Dsonar.sourceEncoding=UTF-8'
   - '-Dsonar.host.url=https://sonarcloud.io'
 # Create env vars file to pass to gcloud command
 - id: 'env'
