--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
 # Scan source for security vulnerabilities
-- id: 'sonarqube-analysis'
-  name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
-  args:
-  - '-Dsonar.organization=$_SONAR_ORG'
-  - '-Dsonar.projectKey=$_SONAR_KEY'
-  - '-Dsonar.sources=./$_FUNCTION_NAME'
-  - '-Dsonar.scm.disabled=True'
-  - '-Dsonar.language=py'
-  - '-Dsonar.sourceEncoding=UTF-8'
-  - '-Dsonar.host.url=https://sonarcloud.io'
+#- id: 'sonarqube-analysis'
+#  name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
+#  args:
+#  - '-Dsonar.organization=$_SONAR_ORG'
+#  - '-Dsonar.projectKey=$_SONAR_KEY'
+#  - '-Dsonar.sources=./$_FUNCTION_NAME'
+#  - '-Dsonar.scm.disabled=True'
+#  - '-Dsonar.language=py'
+#  - '-Dsonar.sourceEncoding=UTF-8'
+#  - '-Dsonar.host.url=https://sonarcloud.io'
 # Create env vars file to pass to gcloud command
 - id: 'env'
   name: 'bash'
